--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ui.profile.ProfileActivity">
+    tools:context=".profile.ProfileActivity">
 
     <View
         android:layout_width="match_parent"
