--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,18 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingLeft="16dp"
-    android:paddingTop="85dp"
     android:paddingRight="16dp"
-    tools:context=".ui.informationUser.LoginActivity">
+    tools:context=".ui.Login.LoginActivity">
 
     <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="85dp"
         android:textSize="32sp"
         android:textStyle="bold"
         android:text="@string/login"
@@ -85,35 +84,65 @@
         android:id="@+id/login_username"
         android:layout_width="295dp"
         android:layout_height="55dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="70dp"
+        android:paddingStart="10dp"
+        android:drawablePadding="5dp"
+        android:hint="Nama anda"
         android:background="@drawable/rounded_edittext_background"
+        android:drawableStart="@drawable/baseline_mail_outline_24"
         app:layout_constraintTop_toBottomOf="@+id/text3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.example.myapplication.ui.customview.CustomEditText
         android:id="@+id/login_password"
         android:layout_width="295dp"
         android:layout_height="55dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="70dp"
+        android:paddingStart="8dp"
+        android:drawablePadding="5dp"
+        android:hint="Kata kunci"
         android:background="@drawable/rounded_edittext_background"
+        android:drawableStart="@drawable/baseline_lock_outline_24"
         app:layout_constraintTop_toBottomOf="@+id/login_username"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <Button
-        android:id="@+id/login_google"
+        android:id="@+id/btn_login"
         android:layout_width="295dp"
         android:layout_height="55dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="70dp"
         android:backgroundTint="@color/purple"
         android:textColor="@color/white"
         android:text="@string/Enter"
         app:layout_constraintTop_toBottomOf="@+id/login_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
+    
+    <TextView
+        android:id="@+id/tvNoAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Tidak punya akun?"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/btn_regis"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/purple"
+        android:layout_marginTop="8dp"
+        android:text="Daftar di sini"
+        android:backgroundTint="@color/transparent"
+        app:layout_constraintTop_toBottomOf="@+id/tvNoAccount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -126,4 +155,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageButton
+        android:id="@+id/btn_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        tools:src="@drawable/baseline_arrow_back_ios_new_24"
+        android:backgroundTint="@color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/text"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
