--- a/app/src/main/res/layout/rekomendasi_danadarurat.xml
+++ b/app/src/main/res/layout/rekomendasi_danadarurat.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FDC500"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <ImageButton
         android:id="@+id/back"
