--- a/app/src/main/res/layout/activity_landing_third.xml
+++ b/app/src/main/res/layout/activity_landing_third.xml
@@ -48,8 +48,21 @@
         android:textColor="@color/purple"
         android:backgroundTint="@color/white"
         android:layout_marginTop="30dp"
+        android:layout_marginLeft="60dp"
         app:layout_constraintTop_toBottomOf="@id/kalimat_landingpage_3"
         app:layout_constraintStart_toStartOf="parent"/>
+
+    <Button
+        android:id="@+id/login"
+        android:layout_width="130dp"
+        android:layout_height="wrap_content"
+        android:text="@string/login"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/purple"
+        android:layout_marginTop="30dp"
+        android:layout_marginLeft="30dp"
+        app:layout_constraintTop_toBottomOf="@id/kalimat_landingpage_3"
+        app:layout_constraintStart_toEndOf="@id/register"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
