--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -70,6 +70,7 @@
                     app:layout_constraintEnd_toEndOf="parent" />
 
                 <Button
+                    android:id="@+id/edit_profile"
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
@@ -179,6 +180,7 @@
             app:layout_constraintTop_toBottomOf="@id/card_mode_hitam">
 
             <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/keluar_aplikasi"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
