--- a/app/src/main/res/layout/activity_register_dana_darurat.xml
+++ b/app/src/main/res/layout/activity_register_dana_darurat.xml
@@ -5,20 +5,20 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.register.RegisterDomisiliActivity">
+    tools:context=".ui.register.RegisterDanaDaruratActivity">
 
     <TextView
-        android:id="@+id/tvProvinsi"
+        android:id="@+id/kepalaKeluargaTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="Provinsi domisili"
+        android:text="@string/kepalaRumah"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/provinsi_domisili"
+        app:layout_constraintStart_toStartOf="@+id/kepalaRumahTanggaEditTextLayout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/provinsi_domisili"
+        android:id="@+id/kepalaRumahTanggaEditTextLayout"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -27,27 +27,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvProvinsi">
+        app:layout_constraintTop_toBottomOf="@id/kepalaKeluargaTextView">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="none"/>
+            android:text="laki - laki"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvLuasRumah"
+        android:id="@+id/tvUsiaKK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Luas rumah"
+        android:text="@string/kepalaRumah"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/LuasRumah"
-        app:layout_constraintTop_toBottomOf="@+id/provinsi_domisili" />
+        app:layout_constraintStart_toStartOf="@id/usiaKK"
+        app:layout_constraintTop_toBottomOf="@+id/kepalaRumahTanggaEditTextLayout" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/LuasRumah"
+        android:id="@+id/usiaKK"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -56,29 +56,28 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvLuasRumah">
+        app:layout_constraintTop_toBottomOf="@+id/tvUsiaKK">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameEditText"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:ems="10"
-            android:inputType="text"
-            android:hint="contoh: 178"/>
+            android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvTipe_bangunan"
+        android:id="@+id/Status_perkawinan_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Tipe bangunan rumahh"
+        android:text="Status perkawinan rumah tangga"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/LuasRumah"
-        app:layout_constraintTop_toBottomOf="@+id/LuasRumah" />
+        app:layout_constraintStart_toStartOf="@id/StatusPerkawinan"
+        app:layout_constraintTop_toBottomOf="@+id/usiaKK" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Tipe_bangunan"
+        android:id="@+id/StatusPerkawinan"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -87,27 +86,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvTipe_bangunan">
+        app:layout_constraintTop_toBottomOf="@id/Status_perkawinan_TextView">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextView1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="none"/>
+            android:text="laki - laki"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvListrik"
+        android:id="@+id/tvPendidikan_terakhir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="listrik"
+        android:text="Pendidikan terakhir kepala rumah tangga"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/Listrik"
-        app:layout_constraintTop_toBottomOf="@+id/Tipe_bangunan" />
+        app:layout_constraintStart_toStartOf="@id/Pendidikan_terakhir"
+        app:layout_constraintTop_toBottomOf="@+id/StatusPerkawinan" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Listrik"
+        android:id="@+id/Pendidikan_terakhir"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -116,27 +115,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvListrik">
+        app:layout_constraintTop_toBottomOf="@id/tvPendidikan_terakhir">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextView2"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="none"/>
+            android:text="laki - laki"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvKamar"
+        android:id="@+id/tvTotalPendapatan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="banyaknya kamar tidur"
+        android:text="@string/kepalaRumah"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/Kamar"
-        app:layout_constraintTop_toBottomOf="@+id/Listrik" />
+        app:layout_constraintStart_toStartOf="@id/totalPendapatan"
+        app:layout_constraintTop_toBottomOf="@+id/Pendidikan_terakhir" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Kamar"
+        android:id="@+id/totalPendapatan"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -145,29 +144,28 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvKamar">
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalPendapatan">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/texeditTP"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:ems="10"
-            android:hint="contoh: 5"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvStatus_milik"
+        android:id="@+id/tvSumber_Pendapatan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Status kepemilikan"
+        android:text="Pendidikan terakhir kepala rumah tangga"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/Status_milik"
-        app:layout_constraintTop_toBottomOf="@+id/Kamar" />
+        app:layout_constraintStart_toStartOf="@id/Sumber_pendapatan"
+        app:layout_constraintTop_toBottomOf="@+id/totalPendapatan" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Status_milik"
+        android:id="@+id/Sumber_pendapatan"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -176,13 +174,13 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvStatus_milik">
+        app:layout_constraintTop_toBottomOf="@id/tvSumber_Pendapatan">
 
         <AutoCompleteTextView
             android:id="@+id/autoCompleteTextView3"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:inputType="none"/>
+            android:text="laki - laki"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -192,7 +190,7 @@
         android:backgroundTint="@color/purple"
         android:text="@string/register2"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/Status_milik"
+        app:layout_constraintTop_toBottomOf="@id/Sumber_pendapatan"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
