--- a/app/src/main/res/layout/activity_register_kepala_rumah.xml
+++ b/app/src/main/res/layout/activity_register_kepala_rumah.xml
@@ -11,16 +11,15 @@
         android:id="@+id/kepalaKeluargaTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="50dp"
         android:text="@string/kepalaRumah"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/kepalaRumahTanggaEditTextLayout"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/kepalaRumahTanggaEditTextLayout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
@@ -30,27 +29,114 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/kepalaKeluargaTextView">
 
+    <AutoCompleteTextView
+        android:id="@+id/autoCompleteTextView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvUsiaKK"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Usia kepala rumah tangga"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/usiaKK"
+        app:layout_constraintTop_toBottomOf="@+id/kepalaRumahTanggaEditTextLayout" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/usiaKK"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvUsiaKK">
+
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/kepalaRumahEditText"
+            android:id="@+id/nameEditText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:ems="10"
+            android:hint="contoh: 70"
             android:inputType="text" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/usiaTextView"
+        android:id="@+id/Status_perkawinan_TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="55dp"
-        android:layout_marginTop="23dp"
-        android:text="@string/usiaRumah"
+        android:layout_marginTop="15dp"
+        android:text="Status perkawinan rumah tangga"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usiaEditTextLayout" />
+        app:layout_constraintStart_toStartOf="@id/StatusPerkawinan"
+        app:layout_constraintTop_toBottomOf="@+id/usiaKK" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usiaEditTextLayout"
+        android:id="@+id/StatusPerkawinan"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/Status_perkawinan_TextView">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView1"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvPendidikan_terakhir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Pendidikan terakhir kepala rumah tangga"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/Pendidikan_terakhir"
+        app:layout_constraintTop_toBottomOf="@+id/StatusPerkawinan" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/Pendidikan_terakhir"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvPendidikan_terakhir">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView2"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvTotalPendapatan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Total pendapatan per tahun"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/totalPendapatan"
+        app:layout_constraintTop_toBottomOf="@+id/Pendidikan_terakhir" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/totalPendapatan"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -59,15 +145,55 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/kepalaKeluargaTextView">
+        app:layout_constraintTop_toBottomOf="@+id/tvTotalPendapatan">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/usiaEditText"
+            android:id="@+id/texeditTP"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:ems="10"
             android:inputType="text"
-            />
+            android:hint="contoh: 170000"/>
     </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvSumber_Pendapatan"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Sumber pendapatan utama"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/Sumber_pendapatan"
+        app:layout_constraintTop_toBottomOf="@+id/totalPendapatan" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/Sumber_pendapatan"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvSumber_Pendapatan">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompleteTextView3"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/purple"
+        android:text="@string/register2"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/Sumber_pendapatan"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
