--- a/app/src/main/res/layout/activity_register_televisi.xml
+++ b/app/src/main/res/layout/activity_register_televisi.xml
@@ -8,17 +8,17 @@
     tools:context=".ui.register.RegisterTelevisiActivity">
 
     <TextView
-        android:id="@+id/kepalaKeluargaTextView"
+        android:id="@+id/tvJumlah_televisi"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="@string/kepalaRumah"
+        android:text="Jumlah televisi yang dimiliki"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@+id/kepalaRumahTanggaEditTextLayout"
+        app:layout_constraintStart_toStartOf="@+id/Jumlah_televisi"
         app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/kepalaRumahTanggaEditTextLayout"
+        android:id="@+id/Jumlah_televisi"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -27,57 +27,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/kepalaKeluargaTextView">
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_televisi">
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView"
+            android:id="@+id/autoCompletetelevisi"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="laki - laki"/>
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvUsiaKK"
+        android:id="@+id/tvJumlah_pendingin_ruangan"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="@string/kepalaRumah"
+        android:text="Jumlah pendingin ruangan"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/usiaKK"
-        app:layout_constraintTop_toBottomOf="@+id/kepalaRumahTanggaEditTextLayout" />
+        app:layout_constraintStart_toStartOf="@id/Jumlah_pendingin_ruangan"
+        app:layout_constraintTop_toBottomOf="@+id/Jumlah_televisi" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/usiaKK"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvUsiaKK">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/nameEditText"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:ems="10"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/Status_perkawinan_TextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Status perkawinan rumah tangga"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/StatusPerkawinan"
-        app:layout_constraintTop_toBottomOf="@+id/usiaKK" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/StatusPerkawinan"
+        android:id="@+id/Jumlah_pendingin_ruangan"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -86,27 +56,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Status_perkawinan_TextView">
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_pendingin_ruangan">
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView1"
+            android:id="@+id/autoCompleteac"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="laki - laki"/>
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvPendidikan_terakhir"
+        android:id="@+id/tvJumlah_komputer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Pendidikan terakhir kepala rumah tangga"
+        android:text="Jumlah komputer pribadi"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/Pendidikan_terakhir"
-        app:layout_constraintTop_toBottomOf="@+id/StatusPerkawinan" />
+        app:layout_constraintStart_toStartOf="@id/Jumlah_komputer"
+        app:layout_constraintTop_toBottomOf="@+id/Jumlah_pendingin_ruangan"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Pendidikan_terakhir"
+        android:id="@+id/Jumlah_komputer"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -115,57 +85,27 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvPendidikan_terakhir">
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_komputer">
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView2"
+            android:id="@+id/autoCompletekomputer"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="laki - laki"/>
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
-        android:id="@+id/tvTotalPendapatan"
+        android:id="@+id/tvJumlah_telepon_seluler"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="@string/kepalaRumah"
+        android:text="Jumlah telepon seluler"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/totalPendapatan"
-        app:layout_constraintTop_toBottomOf="@+id/Pendidikan_terakhir" />
+        app:layout_constraintStart_toStartOf="@id/jumlah_telepon_seluler"
+        app:layout_constraintTop_toBottomOf="@+id/Jumlah_komputer" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/totalPendapatan"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTotalPendapatan">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/texeditTP"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:ems="10"
-            android:inputType="text" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <TextView
-        android:id="@+id/tvSumber_Pendapatan"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="Pendidikan terakhir kepala rumah tangga"
-        android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="@id/Sumber_pendapatan"
-        app:layout_constraintTop_toBottomOf="@+id/totalPendapatan" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/Sumber_pendapatan"
+        android:id="@+id/jumlah_telepon_seluler"
         style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
@@ -174,13 +114,71 @@
         android:layout_marginTop="4dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvSumber_Pendapatan">
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_telepon_seluler">
 
         <AutoCompleteTextView
-            android:id="@+id/autoCompleteTextView3"
+            android:id="@+id/autoCompletetelepon_seluler"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:text="laki - laki"/>
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvJumlah_kulkas"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Jumlah Kulkas"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/jumlah_kulkas"
+        app:layout_constraintTop_toBottomOf="@+id/jumlah_telepon_seluler" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/jumlah_kulkas"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_kulkas">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompletekulkas"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="none"/>
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <TextView
+        android:id="@+id/tvJumlah_mesincuci"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:text="Jumlah mesin cuci"
+        android:textColor="@color/black"
+        app:layout_constraintStart_toStartOf="@id/Jumlah_mesincuci"
+        app:layout_constraintTop_toBottomOf="@+id/jumlah_kulkas" />
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/Jumlah_mesincuci"
+        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvJumlah_mesincuci">
+
+        <AutoCompleteTextView
+            android:id="@+id/autoCompletemesincuci"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:inputType="none"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -190,7 +188,7 @@
         android:backgroundTint="@color/purple"
         android:text="@string/register2"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@id/Sumber_pendapatan"
+        app:layout_constraintTop_toBottomOf="@id/Jumlah_mesincuci"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
