--- a/app/src/main/res/layout/activity_tambah_pengeluaran.xml
+++ b/app/src/main/res/layout/activity_tambah_pengeluaran.xml
@@ -46,6 +46,7 @@
         android:layout_width="295dp"
         android:layout_height="55dp"
         android:layout_marginTop="135dp"
+        android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background_pengeluaran"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -67,6 +68,7 @@
         android:layout_width="295dp"
         android:layout_height="55dp"
         android:layout_marginTop="235dp"
+        android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background_pengeluaran"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -87,6 +89,7 @@
         android:layout_width="295dp"
         android:layout_height="55dp"
         android:layout_marginTop="335dp"
+        android:paddingStart="10dp"
         android:background="@drawable/rounded_edittext_background_pengeluaran"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
