--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,7 +52,7 @@
         android:layout_marginBottom="5dp"
         android:textStyle="bold"
         android:textSize="12sp"
-        android:text="@string/nama_pengguna"
+        android:text="email"
         app:layout_constraintBottom_toTopOf="@+id/login_emails"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -89,7 +89,7 @@
         android:paddingHorizontal="10dp"
         android:drawablePadding="5dp"
         android:inputType="textEmailAddress"
-        android:hint="Nama anda"
+        android:hint="nama@gmail.com"
         android:background="@drawable/rounded_edittext_background"
         android:drawableStart="@drawable/baseline_mail_outline_24"
         app:layout_constraintTop_toBottomOf="@+id/text3"
