--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -51,7 +51,7 @@
                     android:id="@+id/username"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/username"
+                    android:text="Velman noela harefa"
                     android:textStyle="bold"
                     android:textSize="28sp"
                     android:layout_marginTop="70dp"
@@ -63,7 +63,7 @@
                     android:id="@+id/email"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/email"
+                    android:text="velmanharef@gmail.com"
                     android:textSize="19sp"
                     app:layout_constraintTop_toBottomOf="@id/username"
                     app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +104,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        tools:src="@tools:sample/avatars"/>
+        android:src="@drawable/baseline_account_circle"/>
     
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="320dp"
